--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Hind:700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
